Cambio de título y agrego párrafo

--- a/index.html
+++ b/index.html
@@ -115,11 +115,17 @@
               >
                 <div>
                   <h1 class="text-white px-2">
-                    El evento de tecnología más importante del año
+                    El evento de tecnología más importante del mundo mundial
                   </h1>
                   <p class="text-white text-start text-md-end px-2">
                     Únete a la comunidad más grande del pais y aprende de los
                     mejores.
+                  </p>
+                  <p class="text-white">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Sequi, doloremque voluptatem! Magnam voluptas, laudantium,
+                    tempora recusandae labore quaerat ad facilis molestiae rem
+                    obcaecati ab dolore earum neque, praesentium eius repellat?
                   </p>
                 </div>
                 <div
