Modificación de la imagen de contact.htmls

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -92,7 +92,7 @@
             <div class="row g-0">
               <div class="col-md-4 col-lg-6 d-none d-md-block card-contact">
                 <img
-                  src="../assets/02-carousel.png"
+                  src="../assets/01-lugar.jpg"
                   class="img-fluid rounded-start h-100"
                   alt="computador en mesa"
                 />
@@ -141,7 +141,7 @@
                         required
                       ></textarea>
                     </div>
-                    <div class="mb-3 d-grid">
+                    <div class="mb-3 d-grid d-md-flex justify-content-md-end">
                       <button class="btn btn-primary">Enviar</button>
                     </div>
                   </form>
