Funcionalidad de contacto con whatsapp a través del botón con el logo

--- a/index.html
+++ b/index.html
@@ -236,6 +236,15 @@
           </div>
         </div>
       </section>
+      <section class="content-whatsapp">
+        <a href="https://wa.me/+34626342756" target="_blank">
+          <img
+            class="img-whatsapp"
+            src="./assets/whatsapp.avif"
+            alt="logo whatsapp"
+          />
+        </a>
+      </section>
     </main>
     <footer class="container-fluid bg-dark">
       <section
