modifico footer de página speakers

--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -174,16 +174,18 @@
       </section>
     </main>
     <footer class="container-fluid bg-dark">
-      <section class="row py-5 flex-column">
+      <section
+        class="row py-5 gap-3 flex-column flex-md-row align-items-md-center"
+      >
         <div class="col logo-footer text-center mb-3">
-          <img src="/assets/RollingCodeSchool_Blanco.png" alt="logo" />
+          <img src="../assets/RollingCodeSchool_Blanco.png" alt="logo" />
         </div>
         <div class="col text-white text-center d-flex justify-content-around">
           <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
           <i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
           <i class="fa fa-twitch fa-2x" aria-hidden="true"></i>
         </div>
-        <div class="col text-white text-center mt-3">
+        <div class="col text-white text-center">
           <small>RollingCode&copy; 2023</small>
         </div>
       </section>
