Quitamos parte del texto de site.html, agregamos una imagen del site y modificamos estilos del botón

--- a/pages/site.html
+++ b/pages/site.html
@@ -105,20 +105,16 @@
                     nihil ex, iusto dolor quo fuga! Officiis voluptatum
                     laudantium ducimus illo, provident quisquam in. Ipsum
                     assumenda amet non nemo voluptate similique repellendus
-                    animi eius magni voluptatibus molestiae magnam quia, hic
-                    illo ad natus maxime molestias modi quam quae. Ipsam officia
-                    eius perspiciatis tempore iste. Ipsam accusamus illo
-                    doloremque nesciunt aut laudantium, esse, dolorum distinctio
-                    expedita nemo tempora facilis. Autem sit odio inventore qui
-                    et quae voluptate quod harum. Facilis nam asperiores, fuga
-                    id sequi nobis omnis? Minima ea reprehenderit doloremque
-                    accusamus sapiente voluptates blanditiis sed, culpa,
-                    adipisci ut est. Sit error expedita tempora a omnis dolorem
-                    velit facilis sed mollitia eum eaque alias laborum quaerat
-                    repudiandae quam, consequuntur sint? Nostrum consequatur
-                    maxime
+                    animi eius magni voluptatibus molestiae magnam quia.
                   </p>
-                  <div class="d-flex justify-content-end">
+                  <div class="mb-3">
+                    <img
+                      class="w-100"
+                      src="../assets/01-lugar.jpg"
+                      alt="site de Rolling"
+                    />
+                  </div>
+                  <div class="d-grid d-md-flex justify-content-md-end">
                     <a
                       href="https://rollingcodeschool.com"
                       target="_blank"
