--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a class="nav-link" href="./pages/speakers.html">Oradores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/site.html">Lugar y fecha</a>
+                <a class="nav-link" href="./pages/site.html">Site</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/contact.html">Contacto</a>
