Cambio en el menú de index.html lugar y fecha por oficina de Rolling

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                 <a class="nav-link" href="./pages/speakers.html">Oradores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/site.html">Lugar y fecha</a>
+                <a class="nav-link" href="./pages/site.html"
+                  >Oficina de Rolling</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/contact.html">Contacto</a>
